<resources>
    <string name="app_name">RutaXpress</string>
    <string name="login_tittle">Bienvenido!</string>
    <string name="register">Regístrate</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="phone">Teléfono</string>
    <string name="direction">Direccion</string>
    <string name="year">Edad</string>
    <string name="register_button_text">Registrarse</string>
    <string name="email_field_text">Correo Electrónico</string>
    <string name="password_field_text">Contraseña</string>
    <string name="password_confirm_field_text">Confirmar Contraseña</string>
    <string name="forgot_password">Olvidaste tu contraseña</string>
    <string name="login_button_text">Login</string>
    <string name="not_member_text">No eres parte? Regístrate ahora!</string>
    <string name="or_continue_with">O continua con</string>
    <string name="login_header_image">Login Header Image</string>
    <string name="search_box_from">¿Desde dónde vas?</string>
    <string name="search_box_where">Escribe tu ubicacion o selecciona en el mapa</string>
    <string name="bus_lines">Lineas</string>
    <string name="favorite_routes">Rutas Favoritas</string>
    <string name="my_ubication">Mi Ubicación</string>
    <string name="search_btn_text">Buscar Trufi</string>
    <string name="search_btn_text_filter_routes">Busca una linea</string>
    <string name="all_lineas">Todas las lineas</string>
    <string name="choose_direction">Elige la dirección de tu transporte</string>
    <string name="choose_one_option">Elige uno de estas opciones para esta ruta:</string>
    <string name="confirm_direction_trufi">Confirmar dirección del trufi</string>
    <string name="route_start">Ruta de ida</string>
    <string name="route_end">Ruta de vuelta</string>
    <string name="options_to_find_the_route">Opciones para encontrar tu ruta:</string>
    <string name="line_detail">Detalles de la linea</string>
    <string name="markers">Marcadores:</string>
    <string name="favorites_lines">Tus lineas favoritas</string>
    <string name="contrase_a">Contraseña</string>
    <string name="validations">Validaciones Extra</string>
    <string name="driving_line">Linea actual:</string>
    <string name="start_route">Iniciar ruta</string>
    <string name="bus_lines_driver">Mis lineas</string>
    <string name="driver_profile">Mi perfil conductor</string>
    <string name="car_register">Registro del coche</string>
    <string name="make">Marca</string>
    <string name="model">Modelo</string>
    <string name="driver_profile2">Mi perfil conductor</string>
    <string name="Ruta">Linea</string>

</resources>