<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_margin="0dp"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="0dp"
        android:layout_height="412dp"
        android:layout_marginTop="-100dp"
        android:contentDescription="@string/login_header_image"
        android:padding="0dp"
        android:src="@drawable/img_image_login">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tittle"
            android:textSize="30sp"
            style="@style/appSubtitle"
            android:layout_marginTop="0dp"
            >
        </TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="18dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/cv_bg_color"
            app:cardElevation="0dp"
            >

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_field_text"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:singleLine="true"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="18dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/cv_bg_color"
            app:cardElevation="0dp"
            >
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_field_text"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:singleLine="true"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="10dp"
            android:layout_gravity="end" />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/btnColor"
            android:layout_marginTop="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_member_text"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <View
            android:id="@+id/divider"
            android:layout_marginTop="10dp"
            android:layout_width="230dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            tools:background="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_continue_with"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_google"
            >
        </ImageView>
        <ImageView
            android:layout_width="35dp"
            android:layout_marginHorizontal="15dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_facebook"
            >
        </ImageView>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_x"
            >
        </ImageView>

    </LinearLayout>
</LinearLayout>