<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30sp"
        style="@style/appSubtitle"
        android:layout_marginTop="30dp"
        >
    </TextView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cv_bg_color"
        app:cardElevation="0dp"
        >

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:singleLine="true"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/cv_bg_color"
        app:cardElevation="0dp"
        >
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:singleLine="true"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/cv_bg_color"
        app:cardElevation="0dp"
        >
        <EditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="number"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:singleLine="true"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/cv_bg_color"
        app:cardElevation="0dp"
        >
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="number"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:singleLine="true"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/cv_bg_color"
        app:cardElevation="0dp"
        >
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_field_text"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:singleLine="true"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/cv_bg_color"
        app:cardElevation="0dp"
        >
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_field_text"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:singleLine="true"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/btnColor"
        android:layout_marginTop="20dp" />

</LinearLayout>