<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InitialMapActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/fade_background"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_ubication">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Cala Cala, calle los alamos"
            android:textStyle="bold"
            android:textSize="17sp"
            >

        </TextView>
    </LinearLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        >
    </fragment>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:elevation="0dp"
            app:cardBackgroundColor="#DADADA"
            app:cardCornerRadius="19dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_favorite_marquer">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/favorite_routes">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardBackgroundColor="#DADADA"
            app:cardCornerRadius="19dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_bus_icon">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bus_lines">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/search_box_from"
        android:textSize="16sp"
        android:layout_marginVertical="0dp"
        android:textStyle="bold"
        >
    </TextView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="#DADADA"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:hint="Escribe tu ubicacion"
                android:textSize="15sp"
                android:paddingHorizontal="30dp"
                android:background="@android:color/transparent"
                >
            </EditText>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                >

            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="¿A donde vas?"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginVertical="0dp"
        >
    </TextView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#DADADA"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search_box_where"
            android:paddingHorizontal="30dp"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            >
        </EditText>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_btn_text"
            android:background="@color/btnLoginColor"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            >
        </Button>



    </androidx.cardview.widget.CardView>

</LinearLayout>