<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewsDriver.VehicleFormActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/app_orange"
            android:layout_marginBottom="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/car_register"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Completa el registro de todos los campos:"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            >

        </TextView>
        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardCornerRadius="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardBackgroundColor="@color/cv_bg_color"
            app:cardElevation="0dp"
            >
            <EditText
                android:id="@+id/etMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/make"
                android:inputType="text"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:singleLine="true"
                />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardCornerRadius="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardBackgroundColor="@color/cv_bg_color"
            app:cardElevation="0dp"
            >
            <EditText
                android:id="@+id/etModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model"
                android:inputType="text "
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:singleLine="true"
                />

        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btnFotoVehiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Foto del vehiculo"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_700"
        />
        <Button
            android:id="@+id/btnFotoRUAT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Foto de RUAT"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_700"
            />
        <ImageView
            android:layout_width="500dp"
            android:layout_height="290dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_bus_icon"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="40dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnFinishRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginHorizontal="10dp"
        android:text="Terminar registro">
    </Button>
</FrameLayout>